src/test/resources/Parser/SyntaxErrors/UntypedVariable.front
class A:
    void test () {
        a;
    }